# 2D

./: CMakeLists.txt
src/Strawberry/2D/: NormalSprite.cpp  NormalSprite.hpp  NormalSpriteRenderer.cpp  NormalSpriteRenderer.frag  NormalSpriteRenderer.glsl  NormalSpriteRenderer.hpp  NormalSpriteRenderer.vert  Sprite.cpp  Sprite.hpp  SpriteRenderer.cpp  SpriteRenderer.frag  SpriteRenderer.glsl  SpriteRenderer.hpp  SpriteRenderer.vert  SpriteTransform.cpp  SpriteTransform.hpp  TextureAtlas.cpp  TextureAtlas.hpp  TextureManifest.hpp  TextureReference.cpp  TextureReference.hpp
